<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_true"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/falseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/nextB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next" />

    <Button
        android:id="@+id/restartB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_restart"
        android:layout_marginTop="16dp"/>

</LinearLayout>